--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -241,7 +241,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Bebidas sin alcohol</h2>
+    <br><br>
+    <h2>Bebidas sin alcohol</h2>
+    <br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -453,10 +455,9 @@
             </div>
         </div>
     </section>
-    <br>
-    <div>
+    <br><br>
     <h2>Bebidas con alcohol</h2>
-    </div>
+    <br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -485,7 +486,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Snacks</h2>
+    <br><br>
+    <h2>Snacks</h2>
+    <br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -578,7 +581,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Chocolates, Gomitas y Dulces</h2>
+    <br><br>
+    <h2>Chocolates, Gomitas y Dulces</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -711,7 +716,9 @@
             </div>
         </div>
     </section>
+    <br><br>
     <h2>Lácteos</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -788,7 +795,9 @@
             </div>
         </div>
     </section>
+    <br><br>
     <h2>Pastas y arroces</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -825,7 +834,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Salsas y Condimentos</h2>
+    <br><br>
+    <h2>Salsas y Condimentos</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -838,7 +849,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Enlatados</h2>
+    <br><br>
+    <h2>Enlatados</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -851,7 +864,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Panadería</h2>
+    <br><br>
+    <h2>Panadería</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -944,7 +959,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Galletas</h2>
+    <br><br>
+    <h2>Galletas</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -1005,7 +1022,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Cigarillos</h2>
+    <br><br>
+    <h2>Cigarillos</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -1026,7 +1045,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Chicles, Mentas y Chupetes</h2>
+    <br><br>
+    <h2>Chicles, Mentas y Chupetes</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -1087,7 +1108,9 @@
             </div>
         </div>
     </section>
+    <br><br>
     <h2>Congelados</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -1132,7 +1155,9 @@
             </div>
         </div>
     </section>
-    <h2 class="categorias">Limpieza y Hogar</h2>
+    <br><br>
+    <h2>Limpieza y Hogar</h2>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
@@ -1145,6 +1170,7 @@
             </div>
         </div>
     </section>
+    <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
