--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1474,7 +1474,7 @@
         <br>
         <div class="footerlogos">
             <a href="#logo">
-                <img class="logo" src="IMG-AQUISITO-NOMAS/Logo_Own.jpg" height="80px">
+                <img class="logo" src="IMG-AQUISITO-NOMAS/LOGO.jpg" height="80px">
             </a>
         </div>
     </footer>
