--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -178,9 +178,9 @@
         </div>
     </section>
     <br>
-    <h2>Bebidas</h2>
+    <h2>Bebidas / Drinks</h2>
     <br>
-    <h2> Jugos</h2>
+    <h2> Jugos / Juices</h2>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item"> 
@@ -242,7 +242,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Bebidas sin alcohol</h2>
+    <h2>Bebidas sin alcohol / Non-alcoholic drinks</h2>
     <br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -456,7 +456,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Bebidas con alcohol</h2>
+    <h2>Bebidas con alcohol / Alcoholic drinks</h2>
     <br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -487,7 +487,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Snacks</h2>
+    <h2>Bocadillos / Snacks</h2>
     <br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -582,7 +582,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Chocolates, Gomitas y Dulces</h2>
+    <h2>Chocolates, gomitas y dulces / Chocolates, gummies and sweets</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -717,7 +717,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Lácteos</h2>
+    <h2>Lácteos / Dairy</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -796,7 +796,8 @@
         </div>
     </section>
     <br><br>
-    <h2>Pastas y arroces</h2>
+    <h2>Pastas y arroces / Pasta and rice
+    </h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -835,7 +836,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Salsas y Condimentos</h2>
+    <h2>Salsas y Condimentos / Sauces and condiments</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -850,7 +851,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Enlatados</h2>
+    <h2>Enlatados / Canneds</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -865,7 +866,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Panadería</h2>
+    <h2>Panadería / Bakery</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -960,7 +961,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Galletas</h2>
+    <h2>Galletas / Cookies</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -1023,7 +1024,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Cigarillos</h2>
+    <h2>Cigarillos / Cigarettes</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -1046,7 +1047,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Chicles, Mentas y Chupetes</h2>
+    <h2>Chicles, Mentas y Chupetes / Gum, mints and pacifiers</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -1109,7 +1110,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Congelados</h2>
+    <h2>Congelados / frozens</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -1156,7 +1157,7 @@
         </div>
     </section>
     <br><br>
-    <h2>Limpieza y Hogar</h2>
+    <h2>Limpieza y Hogar / Cleaning and home</h2>
     <br><br>
     <section class="contenedor">
         <div class="contenedor-items">
@@ -1171,6 +1172,7 @@
         </div>
     </section>
     <br><br>
+    <h2>Utiles Escolares / School Supplies</h2>
     <section class="contenedor">
         <div class="contenedor-items">
             <div class="item">
