--- a/aquisito_nomas.html
+++ b/aquisito_nomas.html
@@ -1445,6 +1445,20 @@
             </div>
         </div>
     </section>
+    <br>
+    <p>Conoce más de nuestras coberturas <a href="https://wa.me/+593984611893" target="_blank"> <img class="whatsapp" src="IMG-AQUISITO-NOMAS/logo-whatsapp.gif" height="50px" width="50px"> </a>  </p> 
+    <br><br>
+    <div class="anuncios">
+        <video id="miVideo" width="35%" height="auto" autoplay loop>
+            <source src="IMG-AQUISITO-NOMAS/PUBLICIDAD SALUD.mp4" type="video/mp4">
+        </video>
+        <video id="miVideo" width="35%" height="auto" autoplay muted loop>
+            <source src="IMG-AQUISITO-NOMAS/PUBLICIDAD SALUD 2.mp4" type="video/mp4">
+        </video>
+        <video id="miVideo" width="35%" height="auto" autoplay muted loop>
+            <source src="IMG-AQUISITO-NOMAS/PUBLICIDAD SALUD 3.mp" type="video/mp4">
+        </video>
+    </div>
     <br><br>
     <footer>
         <br><br>
